# duckdb_mysql

./: .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake  mysqlconfigure  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/cifiles/: comp_client_err_fake.cc  comp_err_fake.cc  my_config.h
.github/patches/: icu_linux.patch  mysql_linux.patch  mysql_macos.patch  vcpkg_linux.patch  vcpkg_macos.patch
.github/workflows/: HighPriorityIssues.yml  InternalIssuesCreateMirror.yml  InternalIssuesUpdateMirror.yml  Linux.yml  MacOS.yml  MainDistributionPipeline.yml  MysqlTests.yml  Windows.yml  _extension_distribution_macos.yml
src/: CMakeLists.txt  mysql_connection.cpp  mysql_execute.cpp  mysql_extension.cpp  mysql_filter_pushdown.cpp  mysql_scanner.cpp  mysql_storage.cpp  mysql_utils.cpp
src/include/: mysql_connection.hpp  mysql_conversion.hpp  mysql_filter_pushdown.hpp  mysql_result.hpp  mysql_scanner.hpp  mysql_scanner_extension.hpp  mysql_storage.hpp  mysql_text_writer.hpp  mysql_utils.hpp  mysql_version.h
src/include/storage/: mysql_catalog.hpp  mysql_catalog_set.hpp  mysql_delete.hpp  mysql_execute_query.hpp  mysql_index.hpp  mysql_index_entry.hpp  mysql_index_set.hpp  mysql_insert.hpp  mysql_optimizer.hpp  mysql_schema_entries_cache.hpp  mysql_schema_entry.hpp  mysql_schema_set.hpp  mysql_table_entries_cache.hpp  mysql_table_entry.hpp  mysql_table_set.hpp  mysql_transaction.hpp  mysql_transaction_manager.hpp  mysql_update.hpp
src/storage/: CMakeLists.txt  mysql_cache_schema.cpp  mysql_catalog.cpp  mysql_catalog_set.cpp  mysql_clear_cache.cpp  mysql_delete.cpp  mysql_execute_query.cpp  mysql_index.cpp  mysql_index_entry.cpp  mysql_index_set.cpp  mysql_insert.cpp  mysql_optimizer.cpp  mysql_schema_entry.cpp  mysql_schema_set.cpp  mysql_table_entry.cpp  mysql_table_set.cpp  mysql_transaction.cpp  mysql_transaction_manager.cpp  mysql_update.cpp
test/: remove_root_password.sql  test_data.sql
test/sql/: attach_alter.test  attach_clear_cache.test  attach_create_index.test  attach_database_size.test  attach_delete.test  attach_dsn.test  attach_fake_booleans.test  attach_filter_pushdown.test  attach_identifiers_insert.test  attach_keywords.test  attach_large_insert.test  attach_limit.test  attach_many_nulls.test  attach_mysql_geometry.test  attach_no_database.test  attach_nonexistent_database.test  attach_read_only.test  attach_schemas.test  attach_secret.test  attach_simple.test  attach_ssl.test  attach_timestamp_issue_16.test  attach_timezone_insert.test  attach_transactions.test  attach_types.test  attach_types_blob.test  attach_unicode.test  attach_update.test  attach_views.test  attach_zero_date.test  failed_to_connect.test  insert_backslash.test  mysql_execute.test  mysql_query.test  scan_bit.test  scan_blob.test  scan_bool.test  scan_datetime.test  scan_decimal.test  scan_enum.test  (+3 more)
vcpkg_ports/libmysql/: diffy.diff  ignore-boost-version.patch  portfile.cmake  posix_changes.patch  remove_executables.patch  scanner_changes.patch  vcpkg.json
